--- a/common-platform-webhooks-mgmt-web/src/test/resources/application-test.yml
+++ b/common-platform-webhooks-mgmt-web/src/test/resources/application-test.yml
@@ -40,6 +40,41 @@ firefly:
       use-provider-as-topic: true
       custom: ""
 
+    # Security Configuration for Tests
+    security:
+      validate-payload-size: true
+      max-payload-size: 1048576  # 1MB
+      validate-provider-name: true
+      provider-name-pattern: "^[a-z0-9-]+$"
+      enable-ip-whitelist: false
+      ip-whitelist: {}  # Empty map for tests
+      enable-http-idempotency: true
+      http-idempotency-ttl-seconds: 86400
+      enable-request-validation: true
+      allowed-methods:
+        - POST
+      require-content-type: true
+      allowed-content-types:
+        - application/json
+        - application/x-www-form-urlencoded
+
+    # Dead Letter Queue (DLQ) Configuration
+    dlq:
+      enabled: true
+      topic: webhooks.dlq
+
+    # Batching disabled for tests (for predictable behavior)
+    batching:
+      enabled: false
+
+    # Compression disabled for tests (for easier debugging)
+    compression:
+      enabled: false
+
+    # Metadata enrichment enabled for tests
+    metadata-enrichment:
+      enabled: true
+
   # Cache Configuration for Idempotency
   cache:
     enabled: true
