build: update dependencies for new features
- Update core module pom.xml with required dependencies
- Update web module pom.xml for resilience and monitoring libraries
- Adds support for circuit breakers, metrics, and compression
- Ensures all new features have required runtime dependencies

--- a/common-platform-webhooks-mgmt-core/pom.xml
+++ b/common-platform-webhooks-mgmt-core/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>lib-common-eda</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.firefly</groupId>
+            <artifactId>lib-common-cache</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Spring WebFlux -->
         <dependency>
@@ -61,6 +66,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Apache Commons Net for CIDR matching -->
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.11.1</version>
         </dependency>
 
         <!-- Testing -->
