config: migrate HTTP idempotency config to lib-common-web standard
- Remove custom firefly.webhooks.security.enable-http-idempotency properties
- Remove custom firefly.webhooks.security.http-idempotency-ttl-seconds properties
- Add standard idempotency.* configuration for lib-common-web
- Update cache-name from 'webhook-idempotency' to 'default'
- Maintain backward compatibility for event-level idempotency (processor module)

--- a/common-platform-webhooks-mgmt-web/src/main/resources/application.yml
+++ b/common-platform-webhooks-mgmt-web/src/main/resources/application.yml
@@ -97,6 +97,9 @@ management:
 
 # Firefly Webhook Configuration
 firefly:
+  cqrs:
+    enabled: false
+
   webhooks:
     # Destination Configuration for Message Queue Topics/Queues
     # The destination is built using: {prefix}{provider-name}{suffix}
