fix: move webhooks-processor dependency to runtime scope
Changed common-platform-webhooks-mgmt-processor from test scope to
compile scope to enable webhook idempotency service at runtime.

This allows the webhook idempotency cache and event deduplication
to work properly in production deployments.

--- a/common-platform-webhooks-mgmt-web/pom.xml
+++ b/common-platform-webhooks-mgmt-web/pom.xml
@@ -110,13 +110,14 @@
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
 
-        <!-- Testing -->
+        <!-- Webhook Processor (for idempotency and event processing) -->
         <dependency>
             <groupId>com.firefly</groupId>
             <artifactId>common-platform-webhooks-mgmt-processor</artifactId>
             <version>${project.version}</version>
-            <scope>test</scope>
         </dependency>
+
+        <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
