--- a/fireflyframework-webhooks-interfaces/pom.xml
+++ b/fireflyframework-webhooks-interfaces/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.fireflyframework</groupId>
         <artifactId>fireflyframework-webhooks</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>26.01.01</version>
     </parent>
 
     <artifactId>fireflyframework-webhooks-interfaces</artifactId>
