refactor: migrate observability to fireflyframework-observability
- Add fireflyframework-observability dependency
- Extend FireflyMetricsSupport/FireflyHealthIndicator base classes
- Use centralized metric naming (firefly.{module}.{metric}) and tag constants
- Replace duplicate logback-spring.xml with shared logback-firefly.xml include
- Remove direct micrometer/otel/brave/logstash dependencies

--- a/fireflyframework-webhooks-core/pom.xml
+++ b/fireflyframework-webhooks-core/pom.xml
@@ -43,6 +43,13 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Observability (metrics, tracing, health, structured logging) -->
+        <dependency>
+            <groupId>org.fireflyframework</groupId>
+            <artifactId>fireflyframework-observability</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- Spring WebFlux -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
