--- a/fireflyframework-webhooks-processor/pom.xml
+++ b/fireflyframework-webhooks-processor/pom.xml
@@ -80,8 +80,9 @@
 
         <!-- Observability -->
         <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-core</artifactId>
+            <groupId>org.fireflyframework</groupId>
+            <artifactId>fireflyframework-observability</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- Utils -->
