--- a/fireflyframework-webhooks-processor/pom.xml
+++ b/fireflyframework-webhooks-processor/pom.xml
@@ -6,18 +6,12 @@
     <parent>
         <groupId>org.fireflyframework</groupId>
         <artifactId>fireflyframework-webhooks</artifactId>
-        <version>26.02.04</version>
+        <version>26.02.05</version>
     </parent>
 
     <artifactId>fireflyframework-webhooks-processor</artifactId>
     <name>Firefly Webhook Processor Framework</name>
     <description>Hexagonal port definitions and abstract implementations for webhook event processors</description>
-
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <dependencies>
         <!-- Internal modules -->
@@ -33,7 +27,7 @@
         <!-- Common Libraries -->
         <dependency>
             <groupId>org.fireflyframework</groupId>
-            <artifactId>fireflyframework-core</artifactId>
+            <artifactId>fireflyframework-starter-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
